исправлены незначительные ошибки

--- a/index.html
+++ b/index.html
@@ -50,7 +50,25 @@
           </div>
         </header>
         <div class="sliderContainer">
-          <div class="blur"></div>
+          <div class="slider">
+            <div>
+              <img src="public/img/bgs/bg5.png">
+            </div>
+            <div>
+              <img src="public/img/bgs/bg5.png">
+            </div>
+            <div>
+              <img src="public/img/bgs/bg5.png">
+            </div>
+            <div>
+              <img src="public/img/bgs/bg5.png">
+            </div>
+            <div>
+              <img src="public/img/bgs/bg5.png">
+            </div>
+            
+          </div>
+          <!-- <div class="blur"></div> -->
         </div>
         <footer>
           <p onclick="location.href = 'https:/\/www.instagram.com/coffeeboom.talan.atyrau/'">
