--- a/index.html
+++ b/index.html
@@ -55,20 +55,19 @@
               <img src="public/img/bgs/bg5.png">
             </div>
             <div>
-              <img src="public/img/bgs/bg5.png">
+              <img src="public/img/bgs/bg1.png">
             </div>
             <div>
               <img src="public/img/bgs/bg5.png">
             </div>
             <div>
+              <img src="public/img/bgs/bg1.png">
+            </div>
+            <div style="margin-right: 140vw;">
               <img src="public/img/bgs/bg5.png">
             </div>
-            <div>
-              <img src="public/img/bgs/bg5.png">
-            </div>
-            
           </div>
-          <!-- <div class="blur"></div> -->
+          <div class="blur"></div>
         </div>
         <footer>
           <p onclick="location.href = 'https:/\/www.instagram.com/coffeeboom.talan.atyrau/'">
