Добавлена механика переключения страниц

--- a/index.html
+++ b/index.html
@@ -41,31 +41,17 @@
           </div>
           <div class="menuContainer">
             <menu>
-              <div class="menuItem menuActiveItem" style="margin-top: 0px">Основное меню</div>
-              <div class="menuItem">Десерты</div>
-              <div class="menuItem">Алкогольные напитки</div>
-              <div class="menuItem new">Новитки кухни</div>
-              <div class="menuItem new">Новинки бара и десертов</div>
+              <div class="menuItem" style="margin-top: 0px" onclick="changePage('index')">Основное меню</div>
+              <div class="menuItem" onclick="changePage('dess')">Десерты</div>
+              <div class="menuItem" onclick="changePage('alco')">Алкогольные напитки</div>
+              <div class="menuItem new menuActiveItem" onclick="changePage('new')">Новитки кухни</div>
+              <div class="menuItem new" onclick="changePage('newalcodess')">Новинки бара и десертов</div>
             </menu>
           </div>
         </header>
         <div class="sliderContainer">
           <div class="slider">
-            <div>
-              <img src="public/img/bgs/bg5.png">
-            </div>
-            <div>
-              <img src="public/img/bgs/bg1.png">
-            </div>
-            <div>
-              <img src="public/img/bgs/bg5.png">
-            </div>
-            <div>
-              <img src="public/img/bgs/bg1.png">
-            </div>
-            <div style="margin-right: 140vw;">
-              <img src="public/img/bgs/bg5.png">
-            </div>
+            
           </div>
           <div class="blur"></div>
         </div>
