--- a/index.html
+++ b/index.html
@@ -51,7 +51,166 @@
         </header>
         <div class="sliderContainer">
           <div class="slider">
-            
+            <div>
+              <img src="public/img/menu/index/1ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/2ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/3ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/4ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/5ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/6ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/7ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/8ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/9ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/10ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/11ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/12ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/13ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/14ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/15ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/16ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/17ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/18ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/19ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/20ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/21ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/22ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/23ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/24ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/25ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/26ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/27ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/28ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/29ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/30ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/31ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/32ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/33ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/34ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/35ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/36ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/37ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/38ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/39ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/40ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/41ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/42ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/43ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/44ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/45ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/46ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/47ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/48ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/49ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/50ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/51ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/52ru.png">
+            </div>
+            <div>
+              <img src="public/img/menu/index/53ru.png">
+            </div>
+
           </div>
           <div class="blur"></div>
         </div>
